<resources>
    <string name="app_name">GoHaeSungSaCustomer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_album_show">Album Show</string>
    <string name="action_settings">Settings</string>
    <string name="num_of_photo">앨범 내 사진: </string>
    <string name="jang">장</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- Common Resource String -->
    <string name="ok">확인</string>
    <string name="error">이런...</string>
    <string name="server_connection_error">서버 연결시간이 초과되었네요...</string>
    <string name="server_internal_error">서버 내부 오류</string>
    <string name="invalid_idcode">IdCode 입력 오류</string>
    <string name="upload_failed">업로드 실패</string>

    <!-- Recommendation tab strings -->
    <string name="rec_top">이런 머리는 \n 어떠세요?</string>
    <string name="rec_middle">Recommendation comments</string>
    <string name="rec_bottom">Recommendation Image comes here</string>
    <string name="settings">Settings</string>

    <!-- Login page strings -->
    <string name="login_hint">ID</string>
    <string name="pw_hint">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="title_activity_login">LoginAct</string>

    <!-- Main page tab name strings -->
    <string name="home_tab">GoHaeSungSaCustomer</string>
    <string name="rec_tab">추천</string>
    <string name="settings_tab">옵션</string>
    <string name="title_activity_take_photo">TakePhoto</string>
    <string name="title_activity_camera">Camera</string>

    <!-- Take Photo Strings -->
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="front">정면 머리:</string>
    <string name="side">옆 머리:</string>
    <string name="title_activity_sign_up">SignUpAct</string>

    <!-- SignUp String -->
    <string name="signup_title">신규 등록</string>
    <string name="signup_name">이름: </string>
    <string name="signup_tel">전화번호: </string>
    <string name="signup_next">다음으로</string>
    <string name="signup_eval">평가해 주세요:</string>
    <string name="signup_end">완료!</string>
    <string name="signup_alert_title">확인해 주세요!</string>
    <string name="signup_alert_content">이름 혹은 전화번호란을 확인해 주세요</string>
    <string name="signup_wait_title">잠시만요...</string>
    <string name="signup_wait_text">연결중</string>
    <string name="signup_idcode_title">축하합니다!</string>
    <string name="signup_idcode_text1">당신의 id는 </string>
    <string name="signup_idcode_text2"> 입니다!</string>
    <string name="signup_idcode_tel">이미 있는 전화번호 입니다.</string>
    <string name="signup_idcode_internal">내부 전산 오류</string>
    <string name="signup_warning_title">사진을 찍어 볼까요...</string>
    <string name="signup_warning_text">지금 찍는 사진으로 머리스타일을 추천해 드립니다.\n다음을 유의해 주세요!\n &#8226; 배경이 머리색과 다르게 해주세요\n &#8226; 머리에 빛이 비치게 하지 말아주세요\n &#8226; 안경을 벗어 주세요.</string>
    <string name="signup_warning_tel">이미 있는 전화번호 입니다.</string>
    <string name="signup_warning_re">다시 찍어주세요.</string>

</resources>
