<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView android:id="@+id/signup_name_text"
        android:text="@string/signup_name" android:layout_width="match_parent"
        android:textSize="@dimen/headline_text"
        android:layout_marginBottom="@dimen/interval"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <EditText android:id="@+id/signup_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subheading_text"
        android:layout_below="@id/signup_name_text"/>

    <TextView android:id="@+id/signup_tel_text"
        android:text="@string/signup_tel" android:layout_width="match_parent"
        android:textSize="@dimen/headline_text"
        android:layout_marginBottom="@dimen/interval"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_name_edit"/>

    <EditText android:id="@+id/signup_tel_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subheading_text"
        android:layout_below="@id/signup_tel_text"/>

    <Button android:id="@+id/signup_to_next1"
        android:text="@string/signup_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/interval"
        android:background="@color/b500"
        android:textColor="@color/white"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
