<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/b500"
    tools:context="com.example.badasaza.gohaesungsacustomer.LoginAct"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:src="@drawable/logo"/>
    
    <EditText android:id="@+id/id_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/interval"
        android:layout_marginBottom="@dimen/interval"
        android:textSize="@dimen/subheading_text"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:hint="@string/login_hint"/>
    

    <Button android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/interval"
        android:textSize="@dimen/subheading_text"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@color/b800"
        android:layout_marginBottom="@dimen/activity_content_margin"
        android:text="@string/login"/>

    <Button android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/interval"
        android:textSize="@dimen/subheading_text"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@color/b800"
        android:text="@string/signup"/>


</LinearLayout>
