<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:id="@+id/take_photo_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.badasaza.gohaesungsacustomer.TakePhoto">

        <TextView
            android:background="@color/b300"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/headline_text"
            android:text="@string/front"/>

        <LinearLayout
            android:id="@+id/front_container"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:background="@color/b100"
            android:layout_marginBottom="@dimen/interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView
            android:background="@color/b300"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/headline_text"
            android:text="@string/side"/>

        <LinearLayout
            android:id="@+id/side_container"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:background="@color/b100"
            android:layout_marginBottom="@dimen/interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/b800"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/interval"
            android:text="@string/save"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:background="@color/b800"
            android:text="@string/cancel"/>

    </LinearLayout>
</ScrollView>
